[package]
name = "find_closest_points"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"]}

[[bench]]
name = "find_closest_points_benchmark"
harness = false

[profile.release]
debug = true